--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "laracasts/presenter": "^0.2.1",
-        "laravelcollective/html": "5.3.*"
+        "laravelcollective/html": "5.3.*",
+        "cviebrock/eloquent-sluggable": "^4.1"
     },
     "autoload": {
         "classmap": [
