--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.5",
         "laravel/framework": "5.3.*",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/laravel-medialibrary": "^4.9"
     },
     "require-dev": {
