--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,53 @@
+## =========================================================================
+## App Config
+## =========================================================================
+
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tn9+nwdxpncFjPSYzpytq6jMxCWwJQNECmHt+r40OBA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=127.0.0.1:8000
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+## =========================================================================
+## Data Base
+## =========================================================================
+
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+
+## =========================================================================
+## Amazon
+## =========================================================================
+
+AWS_ENDPOINT=
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_DEFAULT_BUCKET=
+
+## =========================================================================
+## Queue & Others
+## =========================================================================
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
+## =========================================================================
+## Redis
+## =========================================================================
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+## =========================================================================
+## Mailer
+## =========================================================================
 
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
@@ -26,6 +55,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+## =========================================================================
+## Pusher
+## =========================================================================
 
 PUSHER_APP_ID=
 PUSHER_KEY=
