--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^2.5",
         "laravel/framework": "5.3.*",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "predis/predis": "^1.1",
         "spatie/laravel-medialibrary": "^4.9"
     },
     "require-dev": {
